# Controlled-Customer-Support-Generation-Using-Hybrid-RAG-and-Parameter-Efficient-Fine-Tuning

./: README.md
customer_support_agent/: .env  README.md  pyproject.toml  requirements-capstone.txt  requirements.txt
customer_support_agent/notebooks/: Baseline_Model_Evaluation.ipynb  Comparative_Analysis_Report.ipynb  Data_Preparation.ipynb  Data_Understanding_and_EDA.ipynb  Fine_Tuning_Pipeline.ipynb  Project_Proposal_and_Methodology.ipynb  RAG_Implementation.ipynb  Solution_V1_RAG_Evaluation.ipynb  Solution_V2_FineTuned_RAG_Evaluation.ipynb
customer_support_agent/scripts/: generate_notebooks.py  generate_reports.py
customer_support_agent/src/customer_support_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
customer_support_agent/src/support_agent/: __init__.py  agent.py  api.py  baseline.py  capstone_config.py  cli.py  config.py  data_prep.py  documents.py  eda.py  evaluation.py  fine_tuning.py  generator.py  reporting.py  retrieval.py  router.py  schema.py  training_data.py  vector_store.py
customer_support_agent/tests/: test_agent.py
