[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "customer-support-agent"
version = "0.1.0"
description = "Grounded customer-support RAG agent for SOP documents"
requires-python = ">=3.10"
dependencies = [
  "pydantic>=2.7",
  "scikit-learn>=1.4",
  "numpy>=1.26",
  "pandas>=2.2",
  "matplotlib>=3.8",
  "seaborn>=0.13",
  "fastapi>=0.111",
  "uvicorn>=0.30",
  "nbformat>=5.10",
]

[project.scripts]
support-agent = "support_agent.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
